#2727 Optimise EQL for entity-typed crit-conditions
Replace IN-subquery pattern with explicit joins.

The previous code emitted IN-subquery constructs guarded by IS NULL / IS NOT NULL
checks likely intended to short-circuit the subquery for null values.
This code was based on two incorrect assumptions:

1. Predicate order in WHERE clauses affects evaluation cost.
   It does not.
   The cost-based optimizer is free to reorder, decompose, and push down
   predicates regardless of how they are written.
   The IS NOT NULL guard does not cause the IN check to be skipped.

2. Avoiding joins improves performance.
   An IN (SELECT ...) is a join expressed less directly.
   Replacing it with an explicit join gives the optimizer more freedom
   to choose seek-driven plans, not less.

In the case of union-typed criteria against property `key`, the previous code would generate:

```
WHERE ID_ IN
  (SELECT ... FROM MEMBER1
   UNION ALL SELECT ... FROM MEMBER2
   ...
   WHERE <case when for key> IN VALUES (...))
```

The new code generates a much simpler expression that doesn't require the union entity to be queried at all:

```
-- For simple keys
WHERE KEY_ IN VALUES (...)
-- For composite keys
WHERE <expr> IN VALUES (...)
```